--- a/index.html
+++ b/index.html
@@ -484,16 +484,16 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="www.facebook.com" target="_blank">
+                                <a href="https://www.facebook.com/profile.php?id=100075238687322" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="https://www.facebook.com/profile.php?id=100075238687322" target="_blank">
+                                <a href="https://twitter.com/AbhayKu86906633" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="https://twitter.com/AbhayKu86906633" target="_blank">
+                                <a href="https://github.com/AbhayKushwaha29004" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://github.com/AbhayKushwaha29004" target="_blank">
+                                <a href="#" target="_blank">
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
